# debug_egg

./: README.md  pyproject.toml  setup.py
degg/: __init__.py  debugegg.py
vp/: variables_plus.py
