[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debug_egg"
version = "1.0.1"
description = "A Python package for debugging."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Egglord" }
]
license = { text = "MIT" }
dependencies = [
    "colorama>=0.4.6"
]
